--- a/help.html
+++ b/help.html
@@ -6,14 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>
+    <h2>
         Help
-    </h1>
+    </h2>
+
+    We help students become greate software engineers.
+
     <ul>
-        <li>We help students become great software engineers.</li>
-        <li>Will I have a mentor?</li>
-        <li>Refunds</li>
         <li>How to become student</li>
+        <li>Refunds</li>
+        <li>Will I have a mentor?</li>
         <li>How long education takes</li>
     </ul>
 </body>
